# cpp_template_examples

./: 00_00_template_for_files.cpp  introduction.cpp  open_all.sh
01_demos/: 01_01_chameleon_type.cpp  01_02_general_mean_template.cpp  01_03_random_generator.cpp  01_04_runtime_prime.cpp  01_05_compile_time_prime.cpp  01_05_runtime_style.cpp  01_06_compile_time_prime_mpl.cpp  01_06_compile_time_prime_using_boost_mpl.cpp
02_template_motivation/: 02_01_wrong_way.cpp  02_02_better_way.cpp  02_03_template_way.cpp
03_template_basics/: 03_03_type_deduction.cpp
03_template_basics/03_01_use_tpl_like_classes/: 03_01_header.hpp  03_01_impl.cpp  03_01_use_tpl_like_classes.cpp  CMakeLists.txt  README.txt  clean.sh
03_template_basics/03_02_use_tpl_header_only/: 03_02_header.hpp  03_02_use_tpl_header_only.cpp
04_mean_trait/: 04_01_functions.cpp  04_02_template_attempt.cpp  04_03_simple_trait.cpp  04_04_concept_trait.cpp
05_sfinae/: 05_01_frist_example.cpp  05_02_has_type.cpp  05_02_is_class.cpp  05_03_has_method.cpp  05_04_std_traits.cpp
06_template_pitfalls/: 06_01_functions_and_templates.cpp
07_concept_programing/: 07_01_vector_normal.cpp  07_02_vector_concept.cpp
08_summary/: 08_01_typedef.cpp  08_02_typename.cpp  08_03_typeinfo_sizeof.cpp  08_04_asserts.cpp  08_05_static_asserts.cpp  08_06_class_template.cpp  08_07_function_template.cpp  08_08_full_specialisation.cpp  08_09_partial_specialisation.cpp  08_10_deduction_constructor.cpp
09_proof/: 09_01_handwritten.cpp  09_02_templated.cpp  09_03_dynamic_polymorphism.cpp  09_04_static_polymorphism.cpp
